Various optimizations to template model code. Template list item sync animation now hides/shows correctly. Fixed issue with template settings modal not showing the correct template type and increased the width of this also.

--- a/thunderchild/static/thunderchild/css_src/templates.less
+++ b/thunderchild/static/thunderchild/css_src/templates.less
@@ -173,4 +173,7 @@
 }
 #template-settings-modal {
   width:575px;
+  select {
+    width:260px;
+  }
 }
